# claude-superpowers

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  sync-skills.yml
scripts/: regenerate_copilot.py
src/agent_superpowers/: cli.py  installer.py
src/agent_superpowers/superpowers-copilot/: copilot-instructions-template.md
src/agent_superpowers/superpowers-copilot/skills/brainstorming/: SKILL.md
src/agent_superpowers/superpowers-copilot/skills/dispatching-parallel-agents/: SKILL.md
src/agent_superpowers/superpowers-copilot/skills/executing-plans/: SKILL.md
src/agent_superpowers/superpowers-copilot/skills/finishing-a-development-branch/: SKILL.md
src/agent_superpowers/superpowers-copilot/skills/receiving-code-review/: SKILL.md
src/agent_superpowers/superpowers-copilot/skills/requesting-code-review/: SKILL.md
src/agent_superpowers/superpowers-copilot/skills/subagent-driven-development/: SKILL.md
src/agent_superpowers/superpowers-copilot/skills/systematic-debugging/: SKILL.md
src/agent_superpowers/superpowers-copilot/skills/test-driven-development/: SKILL.md
src/agent_superpowers/superpowers-copilot/skills/using-git-worktrees/: SKILL.md
src/agent_superpowers/superpowers-copilot/skills/using-superpowers/: SKILL.md
src/agent_superpowers/superpowers-copilot/skills/writing-plans/: SKILL.md
src/agent_superpowers/superpowers-copilot/skills/writing-skills/: SKILL.md
tests/: test_cli.py  test_installer.py
