[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-superpowers"
version = "5.0.6"
description = "Install obra/superpowers agentic skills for GitHub Copilot and Claude Code"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["copilot", "skills", "agents", "superpowers", "claude", "github-copilot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
agent-superpowers = "agent_superpowers.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_superpowers = ["skills/**/*", "skills/**/.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
